chore: バッジウォレット開発分のみを dev-etou のブランチから抽出
