# backend/doc/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: Portal Badges API
   description: 教員研修システム向けバッジ関連データ取得API
-  version: 0.9.7
+  version: 0.9.8
 servers:
   - url: https://chiloportal.example.com/api/v1
 tags:
@@ -28,6 +28,10 @@ tags:
     description: バッジを承認しているコンシューマの一覧
   - name: consumer framework list
     description: 指定したコンシューマIDの育成指標一覧
+  - name: consumer goal list
+    description: コンシューマに関連する教育指標および成長段階の取得
+  - name: consumer badges list
+    description: 各コンシューマに関連する教育指標および成長段階ならびにバッジ一覧取得
 paths:
   /consumer:
     get:
@@ -113,7 +117,7 @@ paths:
         - name: portal_category_id
           in: query
           description: portal category id
-          required: true
+          required: false
           schema:
             type: integer
             format: int64
@@ -335,6 +339,64 @@ paths:
                   $ref: '#/components/schemas/Framework'
         '400':
           description: Invalid ID supplied
+  /consumer/goal/list:
+    get:
+      tags:
+        - consumer goal list
+      description: コンシューマに関連する教育指標および成長段階を取得します
+      operationId: findConsumerGoalList
+      parameters:
+        - name: Authorization
+          in: header
+          description: 成長段階のパスワードを指定し、一致するデータを取得します
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ConsumerGoal'
+        '400':
+          description: Invalid password supplied
+  /consumer/badges/list:
+    get:
+      tags:
+        - consumer badges list
+      description: コンシューマに関連する教育指標および成長段階ならびにバッジ一覧取得を取得します
+      operationId: findConsumerBadgesList
+      parameters:
+        - name: framework_id
+          in: query
+          description: framework id
+          required: true
+          schema:
+            type: number
+        - name: stage_id
+          in: query
+          description: stage id
+          required: true
+          schema:
+            type: number
+        - name: Authorization
+          in: header
+          description: 成長段階のパスワードを指定し、一致するデータを取得します
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ConsumerBadge'
+        '400':
+          description: Invalid parameters supplied
 
 components:
   schemas:
@@ -650,6 +712,87 @@ components:
         - issuer_email
         - digital_badge_class_id
         - detail
+    knowledge:
+      type: array
+      items:
+        $ref: '#/components/schemas/Criteria'
+    ConsumerGoal:
+      type: object
+      properties:
+        consumer_name:
+          type: string
+          example: consumer101
+        consumer_id:
+          type: integer
+          example: 1
+        framework_id:
+          type: integer
+          example: 1
+        framework_name:
+          type: string
+          example: framework101
+        stage_id:
+          type: integer
+          example: 1
+        stage_name:
+          type: string
+          example: stage101
+        field1_name:
+          type: string
+          example: field1011
+    ConsumerBadge:
+      type: object
+      properties:
+        consumer_name:
+          type: string
+          example: consumer101
+        consumer_id:
+          type: integer
+          example: 1
+        framework_id:
+          type: integer
+          example: 1
+        framework_name:
+          type: string
+          example: framework101
+        stage_id:
+          type: integer
+          example: 1
+        stage_name:
+          type: string
+          example: stage101
+        field1_name:
+          type: string
+          example: field1011
+        digital_badge_class_id:
+          type: string
+          example: digitalbadge_classID
+        wisdom_badges_id:
+          type: integer
+          example: 35
+        wisdom_badges_name:
+          type: string
+          example: digitalbadge101
+        wisdom_badges_description:
+          type: string
+          example: digitalbadge101 description ...
+        knowledge_badges_count:
+          type: integer
+          format: int64
+          example: 5
+      additionalProperties: false
+      required:
+        - consumer_name
+        - consumer_id
+        - framework_name
+        - stage_name
+        - stage_password
+        - field1_name
+        - digital_badge_class_id
+        - wisdom_badges_id
+        - wisdom_badges_name
+        - wisdom_badges_description
+        - knowledge_badges_count
     wisdom:
       type: object
       properties:
